Fix z-index

--- a/application/client/assets/styles/core.css
+++ b/application/client/assets/styles/core.css
@@ -262,7 +262,7 @@ section#toolbar {
     width: 100%;
     background-color: #2C2C2C;
     box-shadow: 0px -1px 3px black;
-    z-index: 15;
+    z-index: 5;
 }
 #toolbar article.tb-option {
     position: relative;
